[feat] - 비밀번호 유효성 검사 규칙 적용 및 테스트 추가 (아이디 포함, 연속문자, 반복문자 등)

--- a/UserManagementTestApp.csproj
+++ b/UserManagementTestApp.csproj
@@ -84,6 +84,7 @@
     <Compile Include="ViewModels\UserManagementViewModel.cs" />
     <Compile Include="ViewModels\UserFormModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
+    <Compile Include="Tests\LogicVerifier.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="LoginWindow.xaml">
